--- a/style-home.css
+++ b/style-home.css
@@ -1,49 +1,4 @@
-.titulo-principal{
-    padding-left: 30px;
-}
-
-#banner{
-    width:100%;
-}
-
-.principal{
-    background: #CCCCCC;
-    padding: 20px;
-}
-
-.titulo-centralizado{
-    text-align: center;
-}
-
-p{
-    text-align: center;
-}
-
-em strong{
-    color:red;
-}
-
-#mision{
-    font-size: 20px;
-}
-
-.diferenciales{
-    background: #FFFFFF;
-    padding: 30px;
-}
-
-.items{
-    font-style: italic;
-}
-
-ul{
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
-}
-
-.imagenDiferenciales{
-    width: 50%;
-}
-
+Sobre la Barbería Secchi
+Ubicada en el corazón de la ciudad, la Barbería Secchi trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Secchi ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
+Nuestra misión es: "Proporcionar autoestima y calidad de vida a nuestros clientes".
+Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes. 
