--- a/reset.css
+++ b/reset.css
@@ -13,6 +13,22 @@ header {
     margin: 0 auto;
 }
 
+.form{
+    width: auto;
+    margin: 0 auto;
+    padding: 50px;
+    width: 50%; /* Ancho del fieldset */
+    margin: 0 auto; /* Centrado horizontal del fieldset */
+}
+
+
+/* Estilo general para el fieldset */
+fieldset {
+    border: 1px solid #ccc; /* Borde del fieldset */
+    padding: 20px; /* Espaciado interno del fieldset */
+}
+
+
 nav{
     position: absolute;
     top:110px;
@@ -37,16 +53,15 @@ nav a:hover{
     text-decoration: underline;
 }
 
-.productos{
-    width: 940px;
+.servicios{
+    width: auto;
     margin: 0 auto;
     padding: 50px;
 }
 
 
-.productos li{
-    display: flex;
-    align-items: center;
+.servicios li{
+    display: inline-block;
     text-align: center;
     width: 30%;
     vertical-align: top;
@@ -57,20 +72,20 @@ nav a:hover{
     border-radius: 10px;
 }
 
-.productos li:hover{
+.servicios li:hover{
     border-color:#c78c19;
 }
 
-.productos li:active{
+.servicios li:active{
     border-color:#088c19;
 }
 
-.productos h2{
+.servicios h2{
     font-size: 30px;
     font-weight: bold;
 }
 
-.productos li:hover h2{
+.servicios li:hover h2{
     font-size: 33px;
 }
 
@@ -240,24 +255,4 @@ td,th{
     opacity: 0.3;
 }
 
-.video{
-    width: 560px;
-    margin: 1em auto;
-}
-
-@media screen and (max-width:480px){
-    h1{
-        text-align: center;
-    }
-    nav{
-        position: static;
-    }
-    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video {
-        width: auto;
-    }
-    .lista-diferenciales, .imagen-diferenciales{
-        width: 100%;
-    }
-
-}
 
